locust/deployment-locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: locust
  name: locust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
      - image: edsonoliveira/kira-locust:1.0
        name: locust
        ports:
        - containerPort: 8089
        imagePullPolicy: Always
        volumeMounts:
        - name: locust-scripts
          mountPath: /usr/src/app/scripts
      volumes:
      - name: locust-scripts
        configMap:
          name: locust-scripts
          optional: true
