locust/ingress-locust.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: locust.devopskira.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: locust
            port:
              number: 8089
